Bug: 73330 IE: Issues with display of conv Fix for read/unread icon, date in expanded & collapsed
http://bugzilla.zimbra.com/show_bug.cgi?id=73330

Copied from Perforce
 Change: 371773

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -991,6 +991,10 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	padding:3px;
 }
 
+.Conv2MsgHeader TABLE {
+    border-collapse: separate;
+}
+
 .ZmMailMsgCapsuleView .Link, .Conv2Reply .Link {
 	@FontSize-normal@
 	@Text-link@
